# h8_emulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  elf_loader.cc  elf_loader.h  h8300h.cc  h8300h.h  inner_memory.cc  inner_memory.h  interrupt_queue.h  main.cc  mcu.cc  mcu.h  memory.h  operation_map.cc  operation_map.h  runner.cc  runner.h  sci.cc  sci.h  sci_register.cc  sci_register.h  sender.c  sender.cc  timer8.cc  timer8.h
.github/workflows/: cmake.yml
bus/: buscontroller.h
dram/: dram.cc  dram.h
h8_2/h8_01/bootload/: dump  intr.h  kzload.elf  main.c  vector.c
h8_2/h8_01/os/: command.c  dump  kozos.c  kozos.elf  timer.c  timer.h
h8_2/h8_02/os/: Makefile  command.c  kozos  kozos.c  kozos.h  main.c
h8_2/h8_03/bootload/: intr.S  kzload
h8_2/h8_03/os/: defines.h  dump  kozos  ld.scr
h8_2/h8_04/bootload/: Makefile  kzload  kzload.elf  ld.scr
h8_2/h8_04/os/: Makefile  defines.h  dump  ether.c  etherdrv.c  ip.c  main.c
h8_2/h8_05/bootload/: dram.h  dump  kzload.elf  main.c
h8_2/h8_05/gdb/: device.c
h8_2/h8_05/os/: defines.h  dump  ip.c  kozos  kozos.c  kozos.elf  lib.c  lib.h  netdrv.c  netdrv.h  rtl8019.h
h8_2/h8_06/os/: intr.h  memory.c  netdrv.c  (+1 more)
instructions/: CMakeLists.txt  add.cc  add.h  adds.cc  adds.h  and.cc  and.h  andc.h  bcc.cc  bcc.h  bclr.cc  bclr.h  bld.cc  bld.h  bset.cc  bset.h  btst.cc  btst.h  cmp.cc  cmp.h  dec.cc  dec.h  divxs.cc  divxs.h  exts.cc  exts.h  extu.cc  extu.h  instruction.cc  instruction.h  instruction_table.cc  instruction_table.h  jmp.h  jsr.cc  jsr.h  mov.cc  mov.h  mov_absolute_address.cc  mov_absolute_address.h  mov_immediate.cc  (+47 more)
interrupt/: interrupt_controller.cc  interrupt_controller.h  interrupt_type.h
ioport/: ioport.h
net/: CMakeLists.txt  rtl8019as.cc  rtl8019as.h  rtl8019as_register.cc  rtl8019as_register.h  tap_device.cc  tap_device.h
operation_map/: CMakeLists.txt  operation_map.cc  operation_map.h  operation_map_0x.cc  operation_map_0x.h  operation_map_1x.cc  operation_map_1x.h  operation_map_4x.cc  operation_map_4x.h  operation_map_5x.cc  operation_map_5x.h  operation_map_6x.cc  operation_map_6x.h  operation_map_7Cx.cc  operation_map_7Cx.h  operation_map_7Dx.cc  operation_map_7Dx.h  operation_map_7Ex.cc  operation_map_7Ex.h  operation_map_7Fx.cc  operation_map_7Fx.h  operation_map_7x.cc  operation_map_7x.h
registers/: ccr.h  register16.h  register32.h  register8.h
sci/: sci.cc  sci.h  sci_register.cc  sci_register.h
src/: CMakeLists.txt  elf_loader.h  h8300h.cc  h8300h.h  h8300h_mcu.cc  h8300h_mcu.h  h8board.cc  h8board.h  h8board_mcu.cc  h8board_mcu.h  main.cc  mcu.cc  mcu.h  runner.cc  runner.h  sender.cc
src/board/: CMakeLists.txt  h8board.cc  h8board.h
src/bus/: CMakeLists.txt  buscontroller.cc  buscontroller.h
src/cpu/: CMakeLists.txt  cpu.cc  cpu.h  h8300h_cpu.cc  h8300h_cpu.h  h83069f.cc  h83069f.h  h8register.h  register32.h
src/debugger/: CMakeLists.txt  debugger.cc  debugger.h  debugger_parser.cc  debugger_parser.h
src/dram/: CMakeLists.txt  dram.h  generic_dram.cc  generic_dram.h  h8300h_dram.cc  h8300h_dram.h
src/instructions/: CMakeLists.txt  add.cc  add.h  adds.cc  adds.h  and.cc  and.h  andc.cc  andc.h  arithmetic_helper.h  bcc.cc  bcc.h  bclr.cc  bclr.h  bit_helper.h  bld.cc  bld.h  bset.cc  bset.h  btst.cc  btst.h  cmp.cc  cmp.h  dec.cc  dec.h  divxs.cc  divxs.h  exts.cc  exts.h  extu.cc  extu.h  instruction.cc  instruction.h  instruction_table.cc  instruction_table.h  jmp.cc  jmp.h  jsr.cc  jsr.h  mov.h  (+56 more)
src/interrupt/: CMakeLists.txt  general_interrupt_controller.cc  general_interrupt_controller.h  generic_interrupt_controller.cc  generic_interrupt_controller.h  h8board_interrupt_controller.cc  h8board_interrupt_controller.h  interrupt_controller.cc  interrupt_controller.h  interrupt_type.h
src/ioport/: CMakeLists.txt  ioport.cc
src/mcu/: CMakeLists.txt  h8board_mcu.cc  h8board_mcu.h
src/net/: CMakeLists.txt  nic.h  rtl8019as.cc  rtl8019as.h  rtl8019as_register.cc  rtl8019as_register.h  tap_device.h
src/operation_map/: CMakeLists.txt  operation_map.cc  operation_map.h  operation_map_0x.cc  operation_map_0x.h  operation_map_1x.cc  operation_map_1x.h  operation_map_4x.cc  operation_map_4x.h  operation_map_5x.cc  operation_map_5x.h  operation_map_6x.cc  operation_map_6x.h  operation_map_7Cx.cc  operation_map_7Cx.h  operation_map_7Dx.cc  operation_map_7Dx.h  operation_map_7Ex.cc  operation_map_7Ex.h  operation_map_7Fx.cc  operation_map_7Fx.h  operation_map_7x.cc  operation_map_7x.h
src/registers/: CMakeLists.txt  cpu.h
src/sci/: CMakeLists.txt  adm3202.cc  adm3202.h  adm3202_registers.cc  adm3202_registers.h  h8300h_sci.cc  h8300h_sci.h  h8300h_sci_registers.cc  h8300h_sci_registers.h  sci.cc  sci.h  sci_register.cc  sci_register.h  sci_registers.cc  sci_registers.h
src/timer/: CMakeLists.txt  common.h  h8300h_timer8.cc  h8300h_timer8.h  h8_timer8.cc  h8_timer8.h  tcr.cc  tcr.h  tcsr.cc  tcsr.h  timer8.h  tmr8.cc
src/util/: byteorder.h
test/: CMakeLists.txt  dummy_mcu.h  example.cc
test/cpu/: CMakeLists.txt  cpu_test.cc  h8300h_cpu_test.cc  h83069f_test.cc
test/instructions/: CMakeLists.txt  adds_test.cc  and_test.cc  andc_test.cc  bcc_test.cc  bclr_test.cc  bld_test.cc  bset_test.cc  btst_test.cc  cmp_immediate_test.cc  cmp_register_direct_test.cc  cpu_interrupt_test_fixture.h  cpu_test_fixture.h  dec_test.cc  divxs_test.cc  exts_test.cc  extu_test.cc  jmp_test.cc  jsr_test.cc  mov_absolute_address_test.cc  mov_immediate_test.cc  mov_register_direct_test.cc  mov_register_indirect_test.cc  mov_register_indirect_with_displacement_prepost_test.cc  mov_register_indirect_with_displacement_test.cc  mulxs_test.cc  neg_test.cc  nop_test.cc  not_test.cc  or_immediate_test.cc  orc_test.cc  rotl_test.cc  rotxl_test.cc  rte_test.cc  rts_test.cc  shar_test.cc  shll_test.cc  shlr_test.cc  sleep_test.cc  sub_test.cc  (+4 more)
test/interrupt/: dummy_interrupt_controller.h
test/net/: dummy_nic.h
test/sci/: dummy_sci.h
test/timer/: dummy_timer.h
timer/: CMakeLists.txt  common.cc  tcsr.cc  tcsr.h  timer.cc  timer.h  timer8.cc  timer8.h  tmr8.cc  tmr8.h
(+127 files in other folders)
