cmake_minimum_required(VERSION 3.1)
add_library(instructions STATIC
    instruction_table.cc
	mov_register_direct.cc
	mov_register_indirect.cc
	mov_register_indirect_displacement.cc
	mov_absolute_address.cc
	mov_immediate.cc
	jsr.cc
	exts.cc
	shll.cc
	sub.cc
	rts.cc
	bcc.cc
	cmp.cc
	subs.cc
	and.cc
	adds.cc
	add.cc
	shlr.cc
	dec.cc
	extu.cc
	bclr.cc
	btst.cc
	neg.cc
	xor.cc
	shar.cc
	mulxs.cc
	nop.cc
	orc.cc
	bset.cc
	andc.cc
	sleep.cc
	rte.cc
	or.cc
	trapa.cc
	jmp.cc
	bld.cc
	rotxl.cc
	divxs.cc
	subx.cc
	rotl.cc
	not.cc
)
