cmake_minimum_required(VERSION 3.1)
add_library(operation_map STATIC
    operation_map.cc
    operation_map_0x.cc
    operation_map_1x.cc
    operation_map_4x.cc
    operation_map_5x.cc
    operation_map_6x.cc
    operation_map_7Cx.cc
    operation_map_7Dx.cc
    operation_map_7Ex.cc
    operation_map_7Fx.cc
    operation_map_7x.cc
)
